okd-services/services/authentik/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: authentik
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
spec:
  host: auth.cgraaaj.in
  to:
    kind: Service
    name: authentik-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    externalCertificate:
      name: authentik-tls
  wildcardPolicy: None
